--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,20 @@ jobs:
     release:
         name: build and release electron app
         runs-on: ${{ matrix.os }}
-        
+
         strategy:
             fail-fast: false
             matrix:
               os: [windows-latest, macos-latest, ubuntu-latest]
+              arch: [ x64, arm64 ]
+              include:
+                - os: windows-latest
+                  arch: ia32
+                - os: ubuntu-latest
+                  arch: armv7l
+              exclude:
+                - os: windows-latest
+                  arch: arm64
 
         steps:
           - name: Check out git repository
@@ -23,13 +32,14 @@ jobs:
           - name: Install Node.js
             uses: actions/setup-node@v3.0.0
             with:
-              node-version: "16"
+              node-version: 16.x
+              cache: yarn
 
           - name: Install Dependencies
-            run: npm install
+            run: yarn --network-timeout 100000 || yarn --network-timeout 100000 || yarn --network-timeout 100000
 
           - name: Build Electron App
-            run: npm run make
+            run: yarn make --arch=${{ matrix.arch }}
             env:
               GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
