--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
             fail-fast: false
             matrix:
               os: [windows-latest, macos-latest, ubuntu-latest]
-              arch: [ x64, arm64 ]
+              arch: [ x64 ]
               include:
                 - os: windows-latest
                   arch: ia32
