--- a/package.json
+++ b/package.json
@@ -18,18 +18,59 @@
   "devDependencies": {
     "@electron-forge/cli": "^6.0.3",
     "@electron-forge/maker-deb": "^6.0.3",
+    "@electron-forge/maker-dmg": "^6.0.3",
     "@electron-forge/maker-rpm": "^6.0.3",
     "@electron-forge/maker-squirrel": "^6.0.3",
     "@electron-forge/maker-zip": "^6.0.3",
     "@electron-forge/publisher-github": "^6.0.3",
-    "electron": "^21.3.0"
+    "electron": "^21.3.1"
   },
   "repository": "https://github.com/leochen-g/wechat-assistant-eletron",
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0",
-    "update-electron-app": "^2.0.1",
     "wechaty": "^1.20.2",
     "wechaty-puppet-wechat4u": "^1.13.11",
-    "wechaty-web-panel": "^1.2.1"
+    "wechaty-web-panel": "^1.2.3"
+  },
+  "config": {
+    "forge": {
+      "packagerConfig": {
+        "appVersion": "0.0.1",
+        "name": "智能微秘书",
+        "appCopyright": "Leo_chen",
+        "icon": "./assets/icons/favicon",
+        "win32metadata": {
+          "ProductName": "智能微秘书 Windows",
+          "CompanyName": "aibotk.com",
+          "FileDescription": "智能微秘书 客户端"
+        }
+      },
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "Wechat assistant"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-dmg",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {}
+        }
+      ]
+    }
   }
 }
