--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,11 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-              os: [windows-latest, macos-latest, ubuntu-latest]
+              os: [windows-latest, macos-latest]
               arch: [ x64 ]
               include:
                 - os: windows-latest
                   arch: ia32
-                - os: ubuntu-latest
-                  arch: armv7l
               exclude:
                 - os: windows-latest
                   arch: arm64
@@ -42,33 +40,15 @@ jobs:
             env:
               GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
-          - name: Cleanup Artifacts for Windows
-            if: matrix.os == 'windows-latest'
-            run: |
-              npx rimraf "out/!(*.exe)"
-
-          - name: Cleanup Artifacts for MacOS
-            if: matrix.os == 'macos-latest'
-            run: |
-              npx rimraf "out/!(*.dmg)"
-
-          - name: upload artifacts
-            uses: actions/upload-artifact@v3.0.0
-            with:
-              name: ${{ matrix.os }}
-              path: out
-
           - name: release
             uses: softprops/action-gh-release@v0.1.14
             if: startsWith(github.ref, 'refs/tags/')
             with:
               draft: true
               files: |
-                out/**/*.deb
                 out/**/*.dmg
                 out/**/*setup*.exe
                 out/**/*.nupkg
-                out/**/*.rpm
                 out/**/*.zip
                 out/**/RELEASES
             env:
