fix(模块): 修复样式

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,8 +44,7 @@ jobs:
             with:
               draft: true
               files: |
-                out/**/*.dmg
-                out/**/*setup*.exe
+                out/**/*Setup.exe
                 out/**/*.nupkg
                 out/**/*.zip
                 out/**/RELEASES
