--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@electron-forge/maker-squirrel": "^6.0.3",
     "@electron-forge/maker-zip": "^6.0.3",
     "@electron-forge/publisher-github": "^6.0.3",
-    "electron": "^21.3.1"
+    "electron": "^21.3.1",
+    "electron-reloader": "^1.2.3"
   },
   "repository": "https://github.com/leochen-g/wechat-assistant-electron",
   "dependencies": {
